fix header gap

--- a/assets/components/menu.css
+++ b/assets/components/menu.css
@@ -23,7 +23,6 @@
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  margin: 1rem 0em;
   font-family: 'Lato', 'Helvetica Neue', Arial, Helvetica, sans-serif;
   background: #FFFFFF;
   font-weight: normal;
